--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,39 @@
 
 /* Your CSS Code here. */
+/* styles.css */
+nav {
+  background-color: #333;
+  padding: 10px 0;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+li {
+  display: inline;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.videos {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+video {
+  max-width: 30%;
+}
